--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^0.13.5
   firebase_auth: ^0.16.1
+  image_picker: ^0.6.5+3
 
 dev_dependencies:
   flutter_test:
