--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cloud_firestore: ^0.13.5
   firebase_auth: ^0.16.1
   image_picker: ^0.6.5+3
+  firebase_storage: ^3.1.5
+
 
 dev_dependencies:
   flutter_test:
