--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^0.16.1
   image_picker: ^0.6.5+3
   firebase_storage: ^3.1.5
+  firebase_messaging: ^6.0.13
 
 
 dev_dependencies:
